--- a/index.html
+++ b/index.html
@@ -1,47 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      src="//normalize-css.googlecode.com/svn/trunk/normalize.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin=""
+    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+    crossorigin="anonymous">
+    <title>Restaurant Reviews</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <title>Restaurant Reviews</title>
-</head>
-
-<body>
-  <header>
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
-    </nav>
-  </header>
-
-  <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
-    </section>
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
-        </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
-        </select>
-      </div>
-      <ul id="restaurants-list"></ul>
-    </section>
-  </main>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-
-
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
-
-</body>
-
+  <body>
+    <header class="map-title">
+      <a href="#maincontent" class="skip-link"> Skip to main content</a>
+      <nav aria-labelledby="mainmenulabel">
+        <h1><a href="/">Restaurant Reviews</a></h1>
+      </nav>
+    </header>
+    <main id="maincontent" role="main">
+      <section class="map-filter aria-labelledby="filter-label" item-hiden">
+        <div class="filter-options">
+          <h2 id="filter-label">Filter Results</h2>
+          <select
+            id="neighborhoods-select"
+            name="neighborhoods"
+            title="Select Neighborhoods"
+            onchange="updateRestaurants()"
+          >
+            <option value="all" role="menuitem" tabindex="0">All Neighborhoods</option>
+          </select>
+          <select
+            id="cuisines-select"
+            name="cuisines"
+            title="Select Cuisines"
+            onchange="updateRestaurants()"
+          >
+            <option value="all" role="menuitem" tabindex="0">All Cuisines</option>
+          </select>
+        </div>
+        <ul id="restaurants-list" role="region" aria-label="List Restaurants"></ul>
+      </section>
+      <section id="map-container" role="application" arial-label="Map">
+        <div id="map"></div>
+      </section>
+    </main>
+    <script
+      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+      crossorigin=""
+    ></script>
+    <script
+      type="application/javascript"
+      charset="utf-8"
+      src="js/dbhelper.js"
+    ></script>
+    <script
+      type="application/javascript"
+      charset="utf-8"
+      src="js/main.js"
+    ></script>
+    <script>
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker
+            .register('/sw.js')
+            .then(function() { console.log("Service Worker Registered"); })
+            .catch(error => console.error(error));
+      }
+    </script>
+    <footer id="footer" role="contentinfo">
+      <p>Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</p>
+    </footer>
+  </body>
 </html>
