--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
         <ul id="restaurants-list" role="region" aria-label="List Restaurants"></ul>
       </section>
-      <section id="map-container" role="application" arial-label="Map">
-        <div id="map"></div>
+      <section id="map-container">
+        <div id="map" role="application" arial-label="Map"></div>
       </section>
     </main>
     <script
