--- a/restaurant.html
+++ b/restaurant.html
@@ -65,7 +65,7 @@
       </section>
       <!-- Beginning map -->
       <section id="map-container">
-        <div id="map"></div>
+        <div id="map" role="application" arial-label="Map"></div>
       </section>
       <!-- End map -->
     </main>
